--- a/Indecision app/public/index.html
+++ b/Indecision app/public/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <!--The page content would be rendered by react and the templating is by JSX-->
         <div id = "app"></div>
         <div id = "app2"></div>
         <script src="https://unpkg.com/react@15/dist/react.js"></script>
